# mpl-toolbox

./: CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml
.github/actions/install-js-client/: action.yml
.github/actions/install-node/: action.yml
.github/actions/install-rust/: action.yml
.github/actions/install-solana/: action.yml
.github/actions/prepare-programs/: action.yml
.github/workflows/: build-programs.yml  deploy-js.yml  dummy.yml  main.yml  publish-js-client.yml  test-js-client.yml  test-js.yml  test-programs.yml  verify-js.yml
clients/js/: .eslintrc.js  .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js-associated-token/: .eslintrc.js  README.md  package.json
clients/js-memo/: .eslintrc.js  README.md  package.json  pnpm-lock.yaml
clients/js-system/: .eslintrc.js  package.json  pnpm-lock.yaml  run-test.sh
clients/js-token/: .eslintrc.js  README.md  package.json  pnpm-lock.yaml
configs/: kinobi.cjs  validator.cjs
idls/: candy_guard.json  mpl_system_extras.json  mpl_token_extras.json  spl_address_lookup_table.json  spl_associated_token_account.json  spl_compute_budget.json  spl_memo.json  spl_system.json  spl_token.json
infra/: .ammanrc.js  build-clients.sh  build-programs.sh  generate-clients.sh  generate-idls.sh  kinobi.cjs  shank.cjs  shank.js  shank.mjs  test-clients.sh  test-programs.sh  validator.cjs
programs/: Anchor.toml  Cargo.toml
programs/create-with-rent/: Cargo.toml
programs/system-extras/: Cargo.toml  README.md  package.json
programs/system-extras/src/: error.rs  instruction.rs  processor.rs
programs/system-extras/tests/: create_account_with_rent.rs  integration.rs  transfer_all_sol.rs  utils.rs
programs/token-extras/: Cargo.toml  README.md  package.json
programs/token-extras/src/: error.rs  instruction.rs  lib.rs  processor.rs
programs/token-extras/tests/: create_token_if_missing.rs  utils.rs
(+108 files in other folders)
