[package]
name = "mpl-system-extras"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
solana-program = ">= 1.14.13, < 1.18"
shank = "0.3.0"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = ">= 1.14.13, < 1.18"
solana-sdk = ">= 1.14.13, < 1.18"
spl-token = "=3.5.0"

[lib]
crate-type = ["cdylib", "lib"]
