[package]
name = "mpl-token-extras"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Extra instructions built on top of the native Token program."

[dependencies]
solana-program = ">= 1.14.13, <= 1.18"
shank = "0.4.3"
borsh = "0.10.4"
thiserror = "~1.0.68"
num-derive = "0.4.2"
num-traits = "~0.2.19"
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = [
    "no-entrypoint",
] }
"spl-token-2022" = {version = "3.0.5", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = ">= 1.14.13, <= 1.18"
solana-sdk = ">= 1.14.13, <= 1.18"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]
